# monday

./: .gitignore  ARCHITECTURE_REFACTORING_REPORT.md  ARCHITECTURE_RESTRUCTURE_SUMMARY.md  Agent_Driven_HFT_System_PRD.md  CICD_DELIVERABLES.md  CICD_EXECUTIVE_SUMMARY.md  CICD_IMPLEMENTATION_GUIDE.md  CICD_REVIEW_REPORT.md  CLAUDE.md  CLAUDE_RUST_HFT.md  CLICKHOUSE_REDIS_SETUP.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  Cargo.toml  Cargo_standalone.toml  ENHANCEMENT_COMPLETION_REPORT.md  HFT_PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_ANALYSIS_REPORT.md  PROJECT_STRUCTURE_FINAL.md  README.md  README_CICD_REVIEW.md  README_WLFI_DEMO.md  WORKFLOW_CLEANUP_SUMMARY.md  aliyun_ecs_cost_report_20251005.txt  aliyun_ecs_detailed_report_20251005.txt  aliyun_resource_report.md  bitget_spot_hft.py  bitget_spot_hft_fixed.py  check-env.sh  ci-cd-performance-report.md  clickhouse_writer.rs  dev-workflow.sh  multi_symbol_hft_bot.py  orderbook_manager.py  phase4_action_plan.md  phase4_best_practices_review.md  phase4_executive_summary.md  pyproject.toml  real_bitget_websocket_test.rs  real_data_integration_plan.md  requirements.txt  (+17 more)
agno_hft/: README.md  __init__.py  async_optimization.py  demo.py  demo_multi_training.py  enhanced_agents.py  enhanced_trade_agent.py  hft_agents.py  main.py  pyproject.toml  realtime_monitoring.py  requirements.txt  requirements_cli.txt  rust_hft_tools_v2.py  start_hft.py  test_integration.py  test_training_workflow.py  zero_copy_optimization.py
agno_hft/agno/: team.py  tools.py  workflow.py
agno_hft/agno_hft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agno_hft/config/: enhanced_training_pipeline.yaml
agno_hft/ml/: README.md  dataset.py  evaluate.py  train.py
agno_hft/tests/: __init__.py  conftest.py
agno_hft/workflows/: __init__.py  workflow_manager.py  workflow_manager_v2.py
ml_workspace/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  __init__.py  agno.toml  base.py  cli.py  clickhouse_client.py  pyproject.toml  pytest.ini  requirements.txt  verify_feature_consistency.py
ml_workspace/algorithms/: __init__.py  profit_aware_loss.py  signal_aggregator.py  smart_exit_manager.py  tcn_gru.py  trading_state_manager.py
ml_workspace/components/: __init__.py  data_loaders.py  feature_engineering.py  model_evaluator.py  model_trainer.py
ml_workspace/configs/: README.md  backtest.yaml  features_build.yaml  qa.yaml  train_fit.yaml  unsup_train.yaml
ml_workspace/demos/: lob_core_demo.py
ml_workspace/docs/: ARCHITECTURE.md  ClickHouse特征工程方法论.md  README.md
ml_workspace/lob_core/: __init__.py  alpha_search.py  data_ingestion.py  data_structures.py  features.py  labeling.py  models.py  queue_dynamics.py  tcn_models.py  training_pipeline.py
ml_workspace/memory/: constitution.md  data_quality_report_20251008.md
ml_workspace/templates/: plan-template.md  spec-template.md  tasks-template.md
ml_workspace/tests/: test_feature_engineer_ordering.py  test_feature_registry_contract.py
ml_workspace/utils/: alpha_features.py  cache.py  ch_queries.py  clickhouse_client.py  config.py  feature_registry.py  feature_validator.py  features_37.py  lob_features.py  logging.py  millisecond_features.py  reproducibility.py  streaming_trainer.py  time.py
ml_workspace/workflows/: build_multisymbol_dataset.py  dl_backtest.py  dl_predict.py  export_runtime.py  tcn_gru_train.py  training_workflow.py
rust_hft/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Cargo_test.toml  DATA_COLLECTION_GUIDE.md  DX_IMPROVEMENT_PLAN.md  ECS_DEPLOYMENT_GUIDE.md  FEATURES.md  FEATURES_GUIDE.md  HISTORICAL_DATA_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PRD.md  PRD_v2.0.md  PURE_RUST_ML_TRAINING.md  README.md  README_TESTING.md  REFACTORING_SUMMARY.md  RING_BUFFER_FIX_RESOLUTION.md  SOLUSDT_TRADING_GUIDE.md  TEST_EVALUATION_REPORT.md  TEST_EXECUTION_GUIDE.md  TEST_STRATEGY.md  VERSION  WEBSOCKET_FIX_SUMMARY.md  aliyun_actual_cost_report.md  aster-agent-prd.md  check_data.sh  clickhouse_credentials.txt  debug_ws_test.rs  dependency_analysis_report.md  deploy-collector-auto.sh  deploy-collector.sh  deploy-fixed-collector.sh  deploy-to-ecs.sh  (+19 more)
rust_hft/.cargo/: audit.toml  config.toml
rust_hft/.claude-code/: README.md
rust_hft/.serena/: project.yml
rust_hft/benches/: README.md  architecture_validation.rs  comprehensive_performance_benchmarks.rs  concurrent_connector_benchmark.rs  dashmap_performance.rs  hotpath_latency_p99.rs  latency_benchmarks.rs  latency_regression_test.rs  orderbook_benchmarks.rs  performance_optimization_benchmarks.rs  performance_validation.rs  phase1_performance.rs  simple_architecture_test.rs  simple_performance_benchmarks.rs  strategy_dispatch.rs  ultra_components.rs  ultra_high_perf_benchmarks.rs  ultra_performance_bench.rs
rust_hft/clickhouse/: multi_symbol_tables.sql
rust_hft/config/: _old_trading_config.yaml  agent.toml  backpack_paper.yaml  comprehensive_test.yaml  dl_strategy_config.yaml  enhanced_risk_config.yaml  historical_data_config.yaml  hyperliquid_demo.yaml  hyperliquid_live.yaml  hyperliquid_paper.yaml  instruments.yaml  mock_test.yaml  multi_symbol_collection.yaml  performance_test.yaml  prometheus_alerts.yaml  quick_test.yaml  r_breaker_config.yaml  risk_config.yaml  s1_e2e_config.yaml  secrets.yaml  system_config.yaml  system_test.yaml  test_simple.yaml  venue_specs.yaml  venues.yaml
rust_hft/deployment/: .env.example  CLOUD_DEPLOYMENT.md  Makefile
rust_hft/docker/: Dockerfile  Dockerfile.collector
rust_hft/docs/: ARCHITECTURE_OVERVIEW.md  BACKPACK_GUIDE.md  DEPLOY_DOCKER.md  EVENT_HUB_OPTIMIZATION.md  FEATURE_GATES.md  HYPERLIQUID_GUIDE.md  LIGHTER_GUIDE.md  PRIVATE_WEBSOCKET_IMPLEMENTATION.md  QUOTES_ONLY.md  README.md  REFACTOR_PLAN.md  STRUCTURE_V2.md  architecture-diagram.txt  contracts.md  dependency-analysis-report.md  enhanced_exchange_manager.md  oms-accounting.md  slo_runbook.md  snapshot.md
rust_hft/examples/: Cargo.toml  (+71 more)
test_bitget_standalone/: Cargo.toml
(+1446 files in other folders)
