[project]
name = "agno-hft"
version = "0.1.0"
description = "Rust HFT × Agno 24/7 AI Trading Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "asyncio-mqtt>=0.16.0",
    # ML and Data Processing
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "clickhouse-driver>=0.2.6",
    "redis>=4.5.0",
    # Trading and Finance
    "ccxt>=4.0.0",
    "pybit>=5.7.0",
    "ta>=0.10.2", # 使用 ta 替代 ta-lib，更容易安装
    # Web and API
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0.0",
    # Development and Utilities
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "maturin>=1.9.1",
    "rust-hft-py",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "psutil>=5.9.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.280",
]

cli = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "questionary>=1.10.0",
]

[project.scripts]
hft = "hft_cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--durations=10",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: 單元測試",
    "integration: 集成測試", 
    "performance: 性能測試",
    "e2e: 端到端測試",
    "slow: 慢速測試（運行時間 > 5秒）",
    "workflow: 工作流相關測試",
    "evaluator: 評估器相關測試",
    "agent: Agent 相關測試",
    "system: 系統集成相關測試",
    "requires_rust: 需要 Rust 引擎的測試",
    "requires_db: 需要數據庫的測試",
    "requires_network: 需要網絡連接的測試",
]
asyncio_mode = "auto"
timeout = 300
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agno*", "workflows*", "ml*", "config*", "*.py"]

[tool.uv.sources]
rust-hft-py = { path = "../rust_hft/target/wheels/rust_hft_py-0.1.0-cp39-abi3-macosx_11_0_arm64.whl" }

[tool.setuptools]
py-modules = ["hft_cli", "system_integration", "pipeline_manager"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
