[workspace]
resolver = "2"  # 防止 feature 無腦合併
members = [
    # 穩定核心 (長期穩定)
    "crates/core",            # hft-core: 新型別/錯誤/常量 (0 依賴)
    "crates/ports",           # hft-ports: 穩定事件/traits (ports)
    "crates/instrument",      # hft-instrument: 合約/精度/費率模型
    "crates/snapshot",        # hft-snapshot: ArcSwap/left-right 快照容器
    "crates/engine",          # hft-engine: 單 writer 事件循環
    "crates/data",            # hft-data: 公有行情介面 + 聚合
    "crates/execution",       # hft-execution: OMS/ExecutionClient
    "crates/oms-core",        # hft-oms-core: 訂單狀態機/冪等/路由（純邏輯）
    "crates/portfolio-core",  # hft-portfolio-core: 會計真相源（AccountView）
    # "crates/accounting",    # Removed: duplicate with portfolio-core
    "crates/risk",            # hft-risk: 事前風控
    "crates/integration",     # hft-integration: WS/HTTP/TLS/簽名/限流
    "crates/runtime",         # hft-runtime: 系統運行時和建構器

    # 擴充插槽：adapters (不動核心)
    "crates/data/adapters/adapter-bitget",
    "crates/data/adapters/adapter-binance",
    "crates/data/adapters/adapter-mock",
    "crates/execution/adapters/adapter-bitget",
    "crates/execution/adapters/adapter-binance",

    # 策略 (只依賴 ports + core + instrument)
    "strategies/trend",
    "strategies/arbitrage",
    "strategies/imbalance",

    # 基建旁路 (可選)
    "crates/infra/clickhouse",
    "crates/infra/redis",
    "crates/infra/metrics",
    "crates/infra/venue",
    "crates/infra/ipc",

    # 測試/回放
    "crates/testing",
    "crates/recovery",

    # Apps: feature 開關入口
    "apps/live",          # 真盤
    "apps/collector",     # 原始行情收集器（RAW WS → ClickHouse）
    "apps/paper",         # 模擬盤
    "apps/replay",        # 歷史回放
    "apps/dataset",       # 資料導出（grid/export）
    "apps/infer-cli",     # 簡易 ONNX 推理 CLI
    "crates/infer-onnx",  # ONNX 推理封裝（Tract）
    
    # Examples
    "examples",           # E2E 測試範例
]

# 工作區級別依賴 (最小化)
[workspace.dependencies]
# 核心零依賴
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# 非同步 (只在需要的 crate 開)
tokio = { version = "1.0", default-features = false }
futures = "0.3"

# 高性能 (只在 integration/apps 開)
crossbeam = { version = "0.8", default-features = false }
arc-swap = "1.6"
left-right = "0.11"
crossbeam-utils = { version = "0.8", default-features = false }

# 網路 (只在 integration 開，其他復用)
tokio-tungstenite = { version = "0.20", default-features = false, features = ["connect", "stream", "rustls-tls-webpki-roots"] }
rustls = { version = "0.21", default-features = false, features = ["dangerous_configuration"] }
axum = "0.7"

# JSON (熱點可選 SIMD)
serde_json = "1.0"
simd-json = "0.13"

# 基礎設施（版本統一於 workspace；是否 optional 由各 crate 自己決定）
clickhouse = "0.11"
redis = "0.24"
prometheus = "0.13"

# 日誌 
tracing = "0.1"

# IPC 相關
rmp-serde = "1.3"
uuid = { version = "1.0", features = ["v4"] }
tracing-subscriber = "0.3"

# 時間處理
chrono = { version = "0.4", features = ["serde"] }

# async trait
async-trait = "0.1"

# Decimal types
rust_decimal = { version = "1.33", features = ["serde"] }

[profile.dev]
# 開發模式：編譯快優先
opt-level = 0
debug = true
incremental = true

[profile.release]
# 發布模式：執行快優先 
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
# 基準測試：最高優化
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
