[package]
name = "rust-hft-workspace"
version = "0.0.0"
edition = "2021"
publish = false
description = "Workspace feature orchestrator for rust_hft"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[workspace]
resolver = "2"  # 防止 feature 無腦合併
members = [
    ".",
    # Market Core
    "market-core/core",
    "market-core/ports",
    "market-core/instrument",
    "market-core/snapshot",
    "market-core/engine",
    "market-core/integration",
    "market-core/runtime",

    # Data Pipelines
    "data-pipelines/core",
    "data-pipelines/adapters-common",
    "data-pipelines/adapters/adapter-bitget",
    "data-pipelines/adapters/adapter-binance",
    "data-pipelines/adapters/adapter-backpack",
    "data-pipelines/adapters/adapter-mock",
    "data-pipelines/adapters/adapter-replay",
    "data-pipelines/adapters/adapter-asterdex",
    "data-pipelines/adapters/adapter-hyperliquid",
    "data-pipelines/adapters/adapter-bybit",
    "data-pipelines/adapters/adapter-lighter",
    "data-pipelines/adapters/adapter-grvt",

    # Strategy Framework
    "strategy-framework/strategy-dl",
    "strategy-framework/infer-onnx",
    "strategy-framework/strategies/trend",
    "strategy-framework/strategies/arbitrage",
    "strategy-framework/strategies/imbalance",
    "strategy-framework/strategies/lob_flow_grid",

    # Risk Control
    "risk-control/risk",
    "risk-control/oms-core",
    "risk-control/portfolio-core",

    # Execution Gateway
    "execution-gateway/execution",
    "execution-gateway/adapters/adapter-bitget",
    "execution-gateway/adapters/adapter-binance",
    "execution-gateway/adapters/adapter-okx",
    "execution-gateway/adapters/adapter-hyperliquid",
    "execution-gateway/adapters/adapter-bybit",
    "execution-gateway/adapters/adapter-asterdex",
    "execution-gateway/adapters/adapter-backpack",
    "execution-gateway/adapters/adapter-lighter",
    "execution-gateway/adapters/adapter-grvt",

    # Infra Services
    "infra-services/core/clickhouse",
    "infra-services/core/redis",
    "infra-services/core/metrics",
    "infra-services/core/secrets",
    "infra-services/core/venue",
    "infra-services/core/ipc",
    "infra-services/core/model-manager",
    "infra-services/core/grpc-server",
    "infra-services/testing",

    # Applications
    "apps/live",
    "apps/all-in-one",
    "apps/binance-md",
    "apps/paper",
    "apps/replay",
    "apps/backtest",

    # Shared Catalogs
    "shared/instrument",
    "shared/config",

    # Tools & Utilities
    "tools/collector",
    "tools/dataset",
    "tools/infer-cli",
    "tools/hyperliquid-demo",
    "tools/ws_test",
    "tools/hft-agent",
    "tools/listing-monitor",

    # Examples
    "examples"
]

# 預設只編譯核心元件與主要應用，可透過 `cargo build -p` 指定其他 crate。
default-members = [
    ".",
    "market-core/core",
    "market-core/ports",
    "market-core/engine",
    "market-core/runtime",
    "strategy-framework/strategy-dl",
    "apps/live",
    "apps/paper",
    "apps/all-in-one"
]

# 工作區級別依賴 (最小化)
[dependencies]
serde_json = { workspace = true, optional = true }
simd-json = { workspace = true, optional = true }
arc-swap = { workspace = true, optional = true }
# left-right removed: not suitable for HFT (high write cost, lacks Sync)
clickhouse = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

[workspace.dependencies]
# 核心零依賴
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "2.0"

# 非同步 (只在需要的 crate 開)
tokio = { version = "1.0", default-features = false }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"

# 高性能 (只在 integration/apps 開)
crossbeam = { version = "0.8", default-features = false }
arc-swap = "1.6"
# left-right = "0.11"  # Removed: incompatible with Sync requirement
crossbeam-utils = { version = "0.8", default-features = false }

# 網路 (只在 integration 開，其他復用)
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "stream", "rustls-tls-webpki-roots"] }
rustls = { version = "0.21", default-features = false, features = ["dangerous_configuration"] }
axum = "0.7"

# JSON (熱點可選 SIMD)
serde_json = "1.0"
simd-json = "0.14"

# 基礎設施（版本統一於 workspace；是否 optional 由各 crate 自己決定）
clickhouse = "0.14"
redis = "1.0"
prometheus = "0.13"

parking_lot = "0.12"

# 日誌 
tracing = "0.1"

# IPC 相關
rmp-serde = "1.3"
uuid = { version = "1.0", features = ["v4"] }
tracing-subscriber = "0.3"

# 時間處理
chrono = { version = "0.4", features = ["serde"] }

# async trait
async-trait = "0.1"

# Decimal types
rust_decimal = { version = "1.33", features = ["serde"] }

# CLI and examples
clap = { version = "4.0", features = ["derive"] }
metrics-exporter-prometheus = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
engine = { package = "hft-engine", path = "market-core/engine" }
ports = { package = "hft-ports", path = "market-core/ports" }
hft-core = { package = "hft-core", path = "market-core/core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# 預設採用標準 JSON + arc-swap 快照策略
default = ["json-std", "snapshot-arcswap"]

# 熱路徑 JSON 實作（二選一）
json-std = ["dep:serde_json"]
json-simd = ["dep:simd-json"]

# 快照策略（二選一）
snapshot-arcswap = ["dep:arc-swap"]
# snapshot-left-right removed: ArcSwap is the optimal choice for HFT

# 冷路徑可自由組合的特性
clickhouse = ["dep:clickhouse"]
redis = ["dep:redis"]
metrics = ["dep:metrics-exporter-prometheus"]

[[bench]]
name = "hotpath_latency_p99"
path = "benches/hotpath_latency_p99.rs"
harness = true

[[bench]]
name = "strategy_dispatch"
path = "benches/strategy_dispatch.rs"
harness = false

[[bench]]
name = "ultra_components"
path = "benches/ultra_components.rs"
harness = false

[profile.dev]
# 開發模式：編譯快優先
opt-level = 0
debug = true
incremental = true
lto = false

[profile.release]
# 發布模式：執行快優先，並保持可分發產物精簡
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
split-debuginfo = "packed"

[profile.bench]
# 基準測試：最高優化
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
