[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rust_hft"
version = "0.1.0"
description = "High-Frequency Trading System with Rust Performance and Python Integration"
authors = [
    {name = "HFT Developer", email = "developer@hft.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[tool.maturin]
features = ["python"]
module-name = "rust_hft_py"