[package]
name = "test_bitget_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "test_bitget_connection"
path = "src/main.rs"