[package]
name = "hft-backtest"
version = "0.1.0"
edition = "2021"
publish = false
description = "Event-driven replay backtest template"

[dependencies]
anyhow = "1.0"
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
csv = "1.3"
itertools = "0.12"
ordered-float = "3.9"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

