[package]
name = "hft-collector"
version = "0.1.0"
edition = "2021"
description = "原始行情收集器：直接連接交易所 WS，原樣入庫 ClickHouse"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
clickhouse = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust_decimal = { version = "1", features = ["serde"] }
crc32fast = "1"
ordered-float = "4"
anyhow = "1"
