[package]
name = "hft-live"
version = "0.1.0"
edition = "2021"
description = "真盤交易應用 - 開啟所有重特性的地方"

[dependencies]
# 核心依賴
hft_core = { package = "hft-core", path = "../../market-core/core" }
ports = { package = "hft-ports", path = "../../market-core/ports" }
runtime = { package = "hft-runtime", path = "../../market-core/runtime" }
engine = { package = "hft-engine", path = "../../market-core/engine" }
data = { package = "hft-data", path = "../../data-pipelines/core" }
rust_decimal = { version = "1.33", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 注意：所有可選依賴現在通過 runtime 轉發，移除直接依賴

# 運行時依賴 (真盤重特性全開)
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.0", features = ["derive"] }
serde = { workspace = true }
serde_yaml = "0.9"
prometheus = { workspace = true, optional = true }
infra-metrics = { package = "hft-infra-metrics", path = "../../infra-services/core/metrics", features = ["http-server"], optional = true }
ndarray = "0.15"
hft-infer-onnx = { path = "../../strategy-framework/infer-onnx" }
hft-model-manager = { path = "../../infra-services/core/model-manager" }
risk = { package = "hft-risk", path = "../../risk-control/risk" }
hft-grpc-server = { path = "../../infra-services/core/grpc-server", optional = true }
anyhow = "1"

[features]
default = ["bitget", "trend-strategy", "metrics", "simd"]

# 交易所適配器 (轉發到 runtime)
bitget = ["runtime/bitget"]
binance = ["runtime/binance"]
bybit = ["runtime/bybit"]
okx = ["runtime/okx"]
hyperliquid = ["runtime/hyperliquid"]
asterdex = ["runtime/asterdex"]
mock = ["runtime/mock"]
all-exchanges = ["bitget", "binance", "bybit", "okx", "hyperliquid", "asterdex"]

# 策略 (轉發到 runtime)
trend-strategy = ["runtime/strategy-trend"]
arbitrage-strategy = ["runtime/strategy-arbitrage"]
imbalance-strategy = ["runtime/strategy-imbalance"]
dl-strategy = ["runtime/strategy-dl"]
lob-flow-grid-strategy = ["runtime/strategy-lob-flow-grid"]
all-strategies = [
  "trend-strategy",
  "arbitrage-strategy",
  "imbalance-strategy",
  "dl-strategy",
  "lob-flow-grid-strategy"
]

# 基礎設施 (轉發到 runtime)
clickhouse = ["runtime/clickhouse"]
redis = ["runtime/redis"]
metrics = [
  "runtime/metrics",
  "dep:prometheus",
  "dep:infra-metrics",
  "infra-metrics/http-server"
]
grpc = ["dep:hft-grpc-server"]
full-infra = ["clickhouse", "redis", "metrics", "grpc"]

# SIMD 優化 (生產環境應默認啟用)
simd = ["runtime/json-simd"]

# 完整特性集
full = ["all-exchanges", "all-strategies", "full-infra", "simd", "mock"]
